src/objects/hed__Attendance_Event__c.object
<CustomObject>
    <description>Stores information about a student&apos;s attendance.</description>
    <fields>
        <fullName>hed__Arrival_Time__c</fullName>
        <description>For tardy events, the time when the student arrived.</description>
        <inlineHelpText>For tardy events, the time when the student arrived.</inlineHelpText>
        <label>Arrival Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>hed__Attendance_Type__c</fullName>
        <description>The type of tardy or absence.</description>
        <inlineHelpText>The type of tardy or absence.</inlineHelpText>
        <label>Attendance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Class Absence</fullName>
                </value>
                <value>
                    <fullName>Class Tardy</fullName>
                </value>
                <value>
                    <fullName>Day Absence</fullName>
                </value>
                <value>
                    <fullName>Day Tardy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student who is either tardy or absent.</description>
        <inlineHelpText>The student who is either tardy or absent.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendance Events</relationshipLabel>
        <relationshipName>Attendance_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Course_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The class and period in which the student was either tardy or absent.</description>
        <inlineHelpText>The class and period in which the student was either tardy or absent.</inlineHelpText>
        <label>Course Connection</label>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipLabel>Attendance Events</relationshipLabel>
        <relationshipName>Attendance_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Course_Name__c</fullName>
        <description>The name of the Course for which the student was either tardy or absent.</description>
        <formula>hed__Course_Connection__r.hed__Course_Offering__r.hed__Course__r.Name</formula>
        <inlineHelpText>The name of the Course for which the student was either tardy or absent.</inlineHelpText>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Date__c</fullName>
        <description>The date when the tardy or absence occurred.</description>
        <inlineHelpText>The date when the tardy or absence occurred.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__End_Time__c</fullName>
        <description>For excused absences, the time the absence ends.</description>
        <inlineHelpText>For excused absences, the time the absence ends.</inlineHelpText>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>hed__Reason_Description__c</fullName>
        <description>A description of the reason the student was either tardy or absent.</description>
        <inlineHelpText>A description of the reason the student was either tardy or absent.</inlineHelpText>
        <label>Reason Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Reason__c</fullName>
        <description>The reason the student was either tardy or absent.</description>
        <inlineHelpText>The reason the student was either tardy or absent.</inlineHelpText>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Start_Time__c</fullName>
        <description>For excused absences, the time the absence starts.</description>
        <inlineHelpText>For excused absences, the time the absence starts.</inlineHelpText>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>hed__Unexcused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates an unexcused tardy or absence.</description>
        <inlineHelpText>Indicates an unexcused tardy or absence.</inlineHelpText>
        <label>Unexcused</label>
        <type>Checkbox</type>
    </fields>
    <label>Attendance Event</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AE-{0000}</displayFormat>
        <label>Attendance Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>